--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,17 @@ homepage: https://github.com/adeleyeayodeji/comment_box
 version: 0.0.15
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.10.0 <3.0.0"
+
+analyzer:
+  enable-experiment:
+    - non-nullable
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.3
+  cupertino_icons:
 
 dev_dependencies:
   flutter_test:
